{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 96,
  "lineage": "21fa4b35-1093-6fe5-0745-c44dd22241ab",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "home",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-04-21T05:04:01.178-07:00",
            "enable_cdn": false,
            "fingerprint": "5zCOEunBbjA=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/httpHealthChecks/authentication-health-check"
            ],
            "id": "projects/careful-lock-271320/global/backendServices/login",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "login",
            "port_name": "http",
            "project": "careful-lock-271320",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/backendServices/login",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-21T05:51:33.746-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/careful-lock-271320/global/firewalls/test-firewall",
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/networks/my-network-11",
            "priority": 1000,
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/firewalls/test-firewall",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-fr",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gce-lb-fr",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.102.254.70",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-17T15:13:03.543-07:00",
            "id": "projects/careful-lock-271320/global/addresses/terraform-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "terraform-address",
            "prefix_length": 0,
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/addresses/terraform-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.google-beta",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/careful-lock-271320/global/forwardingRules/terraform-http-rule",
            "ip_address": "34.102.254.70",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "terraform-http-rule",
            "port_range": "80-80",
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/forwardingRules/terraform-http-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/careful-lock-271320/global/targetHttpProxies/terraform-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.home",
            "google_compute_global_address.default",
            "google_compute_http_health_check.default",
            "google_compute_target_http_proxy.http",
            "google_compute_url_map.urlmap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "each": "list",
      "provider": "provider.google-beta",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-21T05:04:25.600-07:00",
            "id": "projects/careful-lock-271320/global/targetHttpProxies/terraform-http-proxy",
            "name": "terraform-http-proxy",
            "project": "careful-lock-271320",
            "proxy_id": 8561072207763300262,
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/targetHttpProxies/terraform-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/urlMaps/urlmap"
          },
          "dependencies": [
            "google_compute_backend_service.home",
            "google_compute_http_health_check.default",
            "google_compute_url_map.urlmap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "provider.google-beta",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-21T05:04:13.278-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/backendServices/login",
            "description": "a description",
            "fingerprint": "Ag8N8d_Cx6Q=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/careful-lock-271320/global/urlMaps/urlmap",
            "map_id": 1700709826192170962,
            "name": "urlmap",
            "path_matcher": [],
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/urlMaps/urlmap",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_service.home",
            "google_compute_http_health_check.default"
          ]
        }
      ]
    }
  ]
}